--- a/src/styles/blocks.module.css
+++ b/src/styles/blocks.module.css
@@ -2,7 +2,7 @@
   display: block;
 }
 
-.front::before {
+.front::before, .input_front::before {
   content: "";
   position: absolute;
   border-radius: 20%;
@@ -13,7 +13,7 @@
   z-index: 1; /* Certifique-se de que o destaque interno fique sobre o conteúdo principal */
 }
 
-.front, .side {
+.front, .side, .input_front {
   border-radius: 4px;
   position: absolute;
   width: inherit;
